Prevent content shift

--- a/responsive-navbar/styles.css
+++ b/responsive-navbar/styles.css
@@ -10,7 +10,7 @@
 }
 
 html {
-  overflow-y: scroll;
+  scrollbar-gutter: stable both-edges;
 }
 
 body {
